Sprint 1.1: ?뷀꽣 濡쒓렇?? 源쒕묀???쒓굅, SNS ?듭씪, ?꾨쾭嫄?媛쒖꽑

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth-ui.js"></script>
-  <script type="module" src="/assets/js/app.js"></script>
+  <script src="/assets/js/app.js" defer></script>
 </body>
 </html>
