--- a/instructors.html
+++ b/instructors.html
@@ -84,6 +84,7 @@
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth-ui.js"></script>
+  <script src="/assets/js/app.js" defer></script>
 
   <script type="module">
     import { INSTRUCTORS } from "./assets/js/data.instructors.js";
