--- a/learn.html
+++ b/learn.html
@@ -81,7 +81,18 @@
       <div class="login-card">
         <h2>로그인이 필요합니다</h2>
         <p>강의실에 접근하려면 로그인해주세요.</p>
-        <button id="btnLoginFromLearn" class="btn primary">로그인하기</button>
+        <form id="loginForm" class="login-form">
+          <div>
+            <label for="guestEmail">이메일</label>
+            <input id="guestEmail" type="email" placeholder="you@example.com" autocomplete="email" required>
+          </div>
+          <div>
+            <label for="guestPassword">비밀번호</label>
+            <input id="guestPassword" type="password" placeholder="8자 이상" autocomplete="current-password" required>
+          </div>
+          <div id="guestError" style="color:#d00;font-size:13px;"></div>
+          <button type="submit" class="btn primary">로그인하기</button>
+        </form>
       </div>
     </div>
 
@@ -116,28 +127,31 @@
     </div>
   </main>
 
-  <!-- 하단 SNS 공통 -->
-  <div class="footer-sns">
-    <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener">
-      <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
-        fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
-        stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
-    </a>
-    <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
-      <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
-        47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
-        47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
-        <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
-    </a>
-    <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
-        <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
-      </svg>
-    </a>
-  </div>
-
-  <footer><div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div></footer>
+  <footer>
+    <div class="footer-sns">
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
+          fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
+          stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
+      </a>
+      <!-- YouTube -->
+      <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
+          47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
+          47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
+          <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
+      </a>
+      <!-- Naver Blog -->
+      <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
+          <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
+        </svg>
+      </a>
+    </div>
+    <div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div>
+  </footer>
 
   <!-- 로그인 모달만 남긴다 -->
   <dialog id="loginDialog" class="modal">
@@ -164,6 +178,7 @@
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth-ui.js"></script>
+  <script src="/assets/js/app.js" defer></script>
   
   <!-- 페이지 전용 스크립트 -->
   <script type="module" src="/assets/js/learn.js"></script>
