--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
   <style>
     .hero {border:1px solid var(--border); border-radius:16px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04)}
-    .info-grid {display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-top:16px}
+    .info-single {margin-top:16px}
     .card-soft {border:1px solid var(--border); border-radius:14px; background:#fff; padding:16px}
     .cta-row {display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
     .map {border:1px solid var(--border); border-radius:16px; overflow:hidden}
-    @media (max-width:860px){ .info-grid {grid-template-columns:1fr} .map iframe {height:320px} }
+    @media (max-width:860px){ .map iframe {height:320px} }
   </style>
 </head>
 <body>
@@ -83,7 +83,7 @@
       </div>
     </section>
 
-    <section class="info-grid">
+    <section class="info-single">
       <div class="card-soft">
         <h3 style="margin:0 0 8px">주소</h3>
         <p style="margin:0 0 8px">
@@ -97,14 +97,6 @@
             네이버지도 열기
           </a>
         </div>
-      </div>
-
-      <div class="card-soft">
-        <h3 style="margin:0 0 8px">상담/통화 가능 시간</h3>
-        <ul style="margin:0; padding-left:18px">
-          <li>평일: 15:00 ~ 22:00</li>
-          <li>주말: 12:00 ~ 22:00</li>
-        </ul>
       </div>
     </section>
 
