Fix: 硫붿씤 媛뺤궗吏??쒖떆, ?곷떞 SNS ?뺣━, ?꾨쾭嫄?z-index 蹂닿컯

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
       <div class="icon-row" style="margin-top:10px">
         <!-- Phone -->
-        <a class="icon-btn" href="tel:028090611">
+        <a class="icon-btn" href="tel:02-809-0611">
           <svg class="icon-24" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2
                      19.79 19.79 0 0 1-8.63-3.07
@@ -58,27 +58,6 @@
                   fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
           02-809-0611
-        </a>
-
-        <!-- Instagram -->
-        <a class="icon-btn" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/">
-          <svg class="icon-24" viewBox="0 0 24 24" aria-hidden="true">
-            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"
-                  fill="none" stroke="currentColor" stroke-width="2"/>
-            <circle cx="12" cy="12" r="3.2" fill="none" stroke="currentColor" stroke-width="2"/>
-            <circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/>
-          </svg>
-        </a>
-
-        <!-- YouTube -->
-        <a class="icon-btn" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared">
-          <svg class="icon-24" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
-                     47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
-                     47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z"
-                  fill="none" stroke="currentColor" stroke-width="2"/>
-            <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/>
-          </svg>
         </a>
       </div>
     </section>
