--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <!-- 강사진 섹션 -->
-    <section class="section">
+    <section id="instructors-preview" class="instructors">
       <h2 style="margin-bottom:8px;">강사진 소개</h2>
       <div class="tabs" id="subjectTabs">
         <button class="tab active" data-subject="ALL">전체</button>
@@ -48,6 +48,9 @@
         <button class="tab" data-subject="컨설팅">컨설팅</button>
       </div>
       <div class="grid-instructors" id="instructorGrid"></div>
+      <div style="text-align:center; margin-top:20px;">
+        <a class="btn" href="./instructors.html">전체 강사진 보기</a>
+      </div>
     </section>
   </main>
 
