feat: implement instructor tabs, back-to-top button, and auth UI improvements
- Add category filtering tabs for instructor section on main page
- Implement instructor card click navigation to detail pages
- Add scroll-triggered back-to-top button on all pages
- Enhance login/logout UI with persistent state management
- Add guest/member view switching for learn page
- Improve mobile hamburger menu stability and z-index handling
- Add responsive grid layout for instructor cards
- Implement localStorage-based authentication state persistence

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container contact-main">
     <h1 style="margin:8px 0 14px">상담</h1>
 
     <section class="hero">
@@ -136,6 +136,9 @@
       <button id="doLogin" class="btn primary">로그인</button>
     </div>
   </dialog>
+
+  <!-- Back to Top 버튼 -->
+  <button id="backToTop" aria-label="맨 위로">↑</button>
 
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
