--- a/instructors.html
+++ b/instructors.html
@@ -81,6 +81,9 @@
     </div>
   </dialog>
 
+  <!-- Back to Top 버튼 -->
+  <button id="backToTop" aria-label="맨 위로">↑</button>
+
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth-ui.js"></script>
