--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
 <body>
   <header>
     <div class="nav">
-      <div class="left"><a href="/"><img src="./assets/grite_logo_columns.jpg" alt="GRIT 로고"></a></div>
+      <div class="left"><a href="./index.html"><img src="./assets/grite_logo_columns.jpg" alt="GRIT 로고"></a></div>
       <div class="center">
         <nav class="menu" id="mainMenu">
-          <a href="/">그릿에듀</a>
-          <a href="/story.html">이야기</a>
-          <a href="/instructors.html">강사진</a>
-          <a href="/gallery.html">갤러리</a>
-          <a href="/contact.html" class="active">상담</a>
+          <a href="./index.html">그릿에듀</a>
+          <a href="./story.html">이야기</a>
+          <a href="./instructors.html">강사진</a>
+          <a href="./gallery.html">갤러리</a>
+          <a href="./contact.html" class="active">상담</a>
         </nav>
       </div>
       <div class="right" style="display:flex;align-items:center;gap:8px">
@@ -141,8 +141,8 @@
   <button id="backToTop" aria-label="맨 위로">↑</button>
 
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
-  <script type="module" src="/assets/js/firebase.js"></script>
-  <script type="module" src="/assets/js/auth-ui.js"></script>
-  <script src="/assets/js/app.js" defer></script>
+  <script type="module" src="./assets/js/firebase.js"></script>
+  <script type="module" src="./assets/js/auth-ui.js"></script>
+  <script src="./assets/js/app.js" defer></script>
 </body>
 </html>
