--- a/instructors.html
+++ b/instructors.html
@@ -10,14 +10,14 @@
 <body>
   <header>
     <div class="nav">
-        <div class="left"><a href="/"><img src="./assets/grite_logo_columns.jpg" alt="로고"></a></div>
+        <div class="left"><a href="./index.html"><img src="./assets/grite_logo_columns.jpg" alt="로고"></a></div>
       <div class="center">
         <nav class="menu" id="mainMenu">
-          <a href="/">그릿에듀</a>
-          <a href="/story.html">이야기</a>
-          <a href="/instructors.html" class="active">강사진</a>
-          <a href="/gallery.html">갤러리</a>
-          <a href="/contact.html">상담</a>
+          <a href="./index.html">그릿에듀</a>
+          <a href="./story.html">이야기</a>
+          <a href="./instructors.html" class="active">강사진</a>
+          <a href="./gallery.html">갤러리</a>
+          <a href="./contact.html">상담</a>
         </nav>
       </div>
       <div class="right" style="display:flex;align-items:center;gap:8px">
@@ -94,9 +94,9 @@
   <button id="backToTop" aria-label="맨 위로">↑</button>
 
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
-  <script type="module" src="/assets/js/firebase.js"></script>
-  <script type="module" src="/assets/js/auth-ui.js"></script>
-  <script src="/assets/js/app.js" defer></script>
+  <script type="module" src="./assets/js/firebase.js"></script>
+  <script type="module" src="./assets/js/auth-ui.js"></script>
+  <script src="./assets/js/app.js" defer></script>
 
   <script type="module">
     import { INSTRUCTORS } from "./assets/js/data.instructors.js";
@@ -107,7 +107,7 @@
     function renderInstructors(subject="ALL") {
       const data = subject === "ALL" ? INSTRUCTORS : INSTRUCTORS.filter(i => i.subject === subject);
       instructorGrid.innerHTML = data.map(t => `
-        <a class="card" href="/instructor.html?id=${t.id}">
+        <a class="card" href="./instructor.html?id=${t.id}">
           <img src="${t.photo}" alt="${t.name}">
           <h3>${t.name} 선생님</h3>
           <p>${t.subject}</p>
