feat: implement core UI functionality
- Add Back-to-Top button with smooth scroll
- Implement temporary auth system with localStorage
- Fix mobile hamburger menu with proper z-index
- Add login/logout button toggle for '??媛뺤쓽?? menu
- Improve button sizing and header alignment
- Add proper touch targets for mobile navigation

--- a/learn.html
+++ b/learn.html
@@ -67,10 +67,11 @@
           <a href="./learn.html" class="active">내 강의실</a>
         </nav>
       </div>
-      <div class="right" style="display:flex;align-items:center;gap:8px">
+      <div class="right header-right" style="display:flex;align-items:center;gap:8px">
         <span id="navUser" class="hidden"></span>
-        <button id="btnOpenLogin" class="btn primary">로그인</button>
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span></span><span></span><span></span></button>
+        <button id="loginBtn" class="btn primary">로그인</button>
+        <button id="logoutBtn" class="btn" style="display:none;">로그아웃</button>
+        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span class="bar"></span><span class="bar"></span><span class="bar"></span></button>
       </div>
     </div>
   </header>
