--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,14 @@
           <a href="./instructors.html">강사진</a>
           <a href="./gallery.html">갤러리</a>
           <a href="./contact.html" class="active">상담</a>
+          <li id="menuLearn" style="display:none;"><a href="./learn.html">내 강의실</a></li>
         </nav>
       </div>
-      <div class="right" style="display:flex;align-items:center;gap:8px">
+      <div class="right header-right" style="display:flex;align-items:center;gap:8px">
         <span id="navUser" class="hidden"></span>
-        <button id="btnOpenLogin" class="btn primary">로그인</button>
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span></span><span></span><span></span></button>
+        <button id="loginBtn" class="btn primary">로그인</button>
+        <button id="logoutBtn" class="btn" style="display:none;">로그아웃</button>
+        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span class="bar"></span><span class="bar"></span><span class="bar"></span></button>
       </div>
     </div>
   </header>
