--- a/gallery.html
+++ b/gallery.html
@@ -22,25 +22,29 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="nav">
-      <div class="left"><a href="/"><img src="./assets/grite_logo_columns.jpg" alt="GRIT 로고" style="height:34px"></a></div>
-      <div class="center">
-        <nav class="menu" id="mainMenu">
-          <a href="/">그릿에듀</a>
-          <a href="./story.html">이야기</a>
-          <a href="./instructors.html">강사진</a>
-          <a href="./gallery.html" class="active">갤러리</a>
-          <a href="./contact.html">상담</a>
-          <li id="menuLearn" style="display:none;"><a href="./learn.html">내 강의실</a></li>
-        </nav>
-      </div>
-      <div class="right header-right" style="display:flex;align-items:center;gap:8px">
-        <span id="navUser" class="hidden"></span>
-        <button id="loginBtn" class="btn primary">로그인</button>
-        <button id="logoutBtn" class="btn" style="display:none;">로그아웃</button>
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span class="bar"></span><span class="bar"></span><span class="bar"></span></button>
-      </div>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="/" class="logo" aria-label="그릿에듀">그릿에듀</a>
+
+      <button class="hamburger" aria-label="메뉴" aria-controls="site-nav" aria-expanded="false">
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+      </button>
+
+      <nav id="site-nav" class="site-nav" aria-label="주 메뉴">
+        <ul>
+          <li><a href="/">그릿에듀</a></li>
+          <li><a href="./story.html">이야기</a></li>
+          <li><a href="./instructors.html">강사진</a></li>
+          <li><a href="./gallery.html" class="active">갤러리</a></li>
+          <li><a href="./contact.html">상담</a></li>
+          <li id="menuLearn"><a href="./learn.html">내 강의실</a></li>
+        </ul>
+        <div class="header-right">
+          <span id="headerEmail" class="header-email" hidden></span>
+          <a id="loginBtn"  class="btn btn-sm">로그인</a>
+          <a id="logoutBtn" class="btn btn-outline btn-sm">로그아웃</a>
+        </div>
+      </nav>
     </div>
   </header>
 
