feat(header): ?띿뒪??濡쒓퀬瑜??대?吏(assets/logo.png)濡?援먯껜

--- a/story.html
+++ b/story.html
@@ -16,7 +16,9 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a href="/" class="logo" aria-label="그릿에듀">그릿에듀</a>
+      <a href="/" class="logo" aria-label="그릿에듀">
+        <img src="./assets/logo.png" alt="그릿에듀 로고" />
+      </a>
 
       <button class="hamburger" aria-label="메뉴" aria-controls="site-nav" aria-expanded="false">
         <span class="bar"></span><span class="bar"></span><span class="bar"></span>
