--- a/index.html
+++ b/index.html
@@ -8,35 +8,8 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
-
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="/" class="logo" aria-label="그릿에듀">
-        <img src="./assets/logo.png" alt="그릿에듀 로고" />
-      </a>
-
-      <button class="hamburger" aria-label="메뉴" aria-controls="site-nav" aria-expanded="false">
-        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-      </button>
-
-      <nav id="site-nav" class="site-nav" aria-label="주 메뉴">
-        <ul>
-          <li><a href="/">그릿에듀</a></li>
-          <li><a href="./story.html">이야기</a></li>
-          <li><a href="./instructors.html">강사진</a></li>
-          <li><a href="./gallery.html">갤러리</a></li>
-          <li><a href="./contact.html">상담</a></li>
-          <li id="menuLearn"><a href="./learn.html">내 강의실</a></li>
-        </ul>
-        <div class="header-right">
-          <span id="headerEmail" class="header-email" hidden></span>
-          <a id="loginBtn"  class="btn btn-sm">로그인</a>
-          <a id="logoutBtn" class="btn btn-outline btn-sm">로그아웃</a>
-        </div>
-      </nav>
-    </div>
-  </header>
+  <!-- 공통 헤더 주입 -->
+  <div data-include="header"></div>
 
   <main class="container">
     <!-- 메인 배너 -->
@@ -88,47 +61,8 @@
     </script>
   </main>
 
-  <footer>
-    <div class="footer-sns">
-      <!-- Instagram -->
-      <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
-          fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
-          stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
-      </a>
-      <!-- YouTube -->
-      <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
-          47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
-          47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
-          <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
-      </a>
-      <!-- Naver Blog -->
-      <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
-          <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
-        </svg>
-      </a>
-    </div>
-    <div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div>
-  </footer>
-
-  <!-- 로그인 모달 -->
-  <dialog id="loginDialog" class="modal">
-    <form method="dialog" id="loginForm" class="login-form">
-      <h3>로그인</h3>
-      <label>이메일 <input type="email" id="loginEmail" required></label>
-      <label>비밀번호 <input type="password" id="loginPassword" required></label>
-      <div class="row">
-        <button value="cancel" class="btn btn-outline">취소</button>
-        <button id="loginSubmit" class="btn">로그인</button>
-      </div>
-    </form>
-  </dialog>
-
-  <!-- Back to Top 버튼 -->
-  <button id="backToTop" aria-label="맨 위로">↑</button>
+  <!-- 공통 푸터 주입 -->
+  <div data-include="footer"></div>
 
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="./assets/js/firebase.js"></script>
