feat: split data to JSON, fix instructors, add course skeleton & local progress

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       <img src="./assets/banner_main.png" alt="교육의 새로운 표준 GRIT EDU">
     </section>
 
+    <!-- 코스 섹션 -->
+    <section class="section">
+      <h2 style="margin-bottom:16px;">인기 코스</h2>
+      <div class="grid-instructors" id="coursesGrid"></div>
+    </section>
+
     <!-- 강사진 섹션 -->
     <section class="section">
       <h2 style="margin-bottom:8px;">강사진 소개</h2>
@@ -39,7 +45,6 @@
         <button class="tab" data-subject="수학">수학</button>
         <button class="tab" data-subject="영어">영어</button>
         <button class="tab" data-subject="과학">과학</button>
-        <button class="tab" data-subject="컨설팅">컨설팅</button>
       </div>
       <div class="grid-instructors" id="instructorGrid"></div>
     </section>
@@ -47,5 +52,6 @@
 
   <footer><div class="inner">© 2025 GRIT EduTech | 교육의 새로운 표준</div></footer>
   <script type="module" src="./assets/js/app.js"></script>
+  <script type="module" src="./assets/js/render-courses.js"></script>
 </body>
 </html>
